# taarn_basestation_ros

./: README.md
taarn_basestation_bringup/: CMakeLists.txt  package.xml
taarn_basestation_bringup/launch/: basestation.launch
taarn_basestation_bringup/launch/include/: bluerov.launch  ds_cap.launch  mallard.launch  virtual_tether.launch
taarn_basestation_bringup/params/: ds_cap.yaml
taarn_teleop_joy/: CMakeLists.txt  README.md  package.xml
taarn_teleop_joy/config/: bluerov_ps4.config.yaml  mallard_ps4.config.yaml
taarn_teleop_joy/launch/: bluerov_teleop_joy.launch  dual_teleop_joy.launch  mallard_teleop_joy.launch
taarn_teleop_joy/src/: teleop_joy.cpp  teleop_node.cpp
