<?xml version="1.0"?>
<package format="2">
  <name>taarn_basestation_bringup</name>
  <version>0.0.0</version>
  <description>ROS package for bringing up TAARN basestation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhengyi.jiang@ice9robotics.co.uk">Zhengyi Jiang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>taarn_teleop_joy</exec_depend>
  <exec_depend>xueliang_localisation</exec_depend>
  <!-- MALLARD/launch_config-->
  <exec_depend>launch_config</exec_depend>


  <export>

  </export>
</package>
