<?xml version="1.0"?>
<package format="2">
  <name>taarn_teleop_joy</name>
  <version>0.0.0</version>
  <description>taarn_teleop_joy is built upon the original teleop_joy by Mike Purvis. Additional feature includes arming vehicle through mavros and send an additional Twist message for depth control.</description>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>